- Android 12 support - Improved typing

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-native-beacons-manager",
-  "version": "1.1.0",
+  "name": "@rodrigo77777/react-native-beacons-manager",
+  "version": "1.1.21",
   "description": "React-Native library for detecting beacons (iOS and Android)",
   "keywords": [
     "react-native",
@@ -18,16 +18,16 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/MacKentoch/react-native-beacons-manager.git"
+    "url": "git+https://github.com/Rodrigo77777/react-native-beacons-manager.git"
   },
   "typescript": {
-    "definition": "typings/react-native-beacons-manager.d.ts"
+    "definition": "typings/index.d.ts"
   },
-  "types": "typings/react-native-beacons-manager.d.ts",
+  "types": "typings/index.d.ts",
   "bugs": {
-    "url": "https://github.com/MacKentoch/react-native-beacons-manager/issues"
+    "url": "https://github.com/Rodrigo77777/react-native-beacons-manager/issues"
   },
-  "homepage": "https://github.com/MacKentoch/react-native-beacons-manager#readme",
+  "homepage": "https://github.com/Rodrigo77777/react-native-beacons-manager#readme",
   "main": "index.js",
   "directories": {
     "example": "examples",
@@ -43,7 +43,7 @@
     "flow": "node_modules/.bin/flow",
     "flow-typed": "node_modules/.bin/flow-typed"
   },
-  "author": "Erwan DATIN (http://www.erwan-datin.com)",
+  "author": "Rodrigo Figueira",
   "license": "MIT",
   "nativePackage": true,
   "devDependencies": {
