--- a/android/build.gradle
+++ b/android/build.gradle
@@ -103,6 +103,6 @@ repositories {
 dependencies {
     //noinspection GradleDynamicVersion
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.facebook.react:react-native:0.67.2'
+    implementation 'com.facebook.react:react-native:+'
     implementation 'org.altbeacon:android-beacon-library:2.19'
 }
